Fix bug: compilation error in SCSS + align items in header

--- a/task2_5/styles/style.scss
+++ b/task2_5/styles/style.scss
@@ -1,4 +1,4 @@
-@use "variables";
+@import "variables";
 
 #all-content {
   background-color: $body-background-color;
@@ -22,6 +22,7 @@
 
 .header {
   display: flex;
+  align-items: center;
   column-gap: 1rem;
   padding: 0.5rem;
   background-color: #1a202c;
